// Vitest Snapshot v1

exports[`Test duplicates tool > Should be able to ignore certain paths 1`] = `
Map {
  "welcome" => [
    [
      "welcome",
    ],
    [
      "about",
      "footer",
      "welcome",
    ],
  ],
}
`;

exports[`Test duplicates tool > Should be able to ignore sub-trees 1`] = `
Map {
  "welcome" => [
    [
      "welcome",
    ],
    [
      "home",
      "welcome",
    ],
    [
      "about",
      "header",
      "welcome",
    ],
  ],
}
`;

exports[`Test duplicates tool > Should be able to ignore sub-trees using the * pattern 1`] = `
Map {
  "welcome" => [
    [
      "welcome",
    ],
    [
      "about",
      "welcome",
    ],
  ],
}
`;

exports[`Test duplicates tool > Should find a duplicate property and its paths 1`] = `
Map {
  "welcome" => [
    [
      "welcome",
    ],
    [
      "home",
      "welcome",
    ],
  ],
}
`;

exports[`Test duplicates tool > Should find multiple, nested duplicate 1`] = `
Map {
  "welcome" => [
    [
      "welcome",
    ],
    [
      "home",
      "welcome",
    ],
    [
      "home",
      "sideBar",
      "welcome",
    ],
  ],
}
`;

exports[`Test duplicates tool > Should work with arrays too 1`] = `
Map {
  "welcome" => [
    [
      "welcome",
    ],
    [
      "home",
      "welcome",
    ],
    [
      "home",
      "sideBar",
      "welcome",
    ],
    [
      "about",
      "footer",
      0,
      "welcome",
    ],
    [
      "about",
      "footer",
      1,
      "welcome",
    ],
    [
      "about",
      "footer",
      2,
      "welcome",
    ],
  ],
  "copyright" => [
    [
      "copyright",
    ],
    [
      "about",
      "footer",
      2,
      "copyright",
    ],
  ],
}
`;
